# serviz

./: .gitignore  CMakeLists.txt  README.md  REVIEW.md  agents.md
.github/workflows/: ci.yml
scripts/: download_deps.py
src/: axes.c  axes.h  cli.c  cli.h  colormap.c  colormap.h  data.c  data.h  main.c  palette.c  palette.h  render.c  render.h  spec.c  spec.h  tooltip.c  tooltip.h  transform.h
test_specs/: bars.json  candles.json  histogram.json  multi_series.json  numeric.json  timeseries.json
tests/: test_axes.c  test_cli.c  test_colormap.c  test_data.c  test_palette.c  test_spec.c  test_tooltip.c  test_transform.c
